bug fixing background transparency on ios

--- a/style.css
+++ b/style.css
@@ -143,8 +143,10 @@ input:focus.error {
 
 @media only screen and (max-width: 567.9px) {
 	.bg-dark {
-	  max-width: 100vw;
-	  width: 100vw;
+		background: rgb(0, 0, 0, 0.9);
+		max-width: 100vw;
+		visibility: visible;
+		width: 100vw;
 	}
   }
 
